--- a/package.json
+++ b/package.json
@@ -13,10 +13,12 @@
     "@reduxjs/toolkit": "^2.3.0",
     "@types/react-modal-video": "^1.2.3",
     "aos": "^2.3.4",
+    "axios": "^1.8.4",
     "bootstrap": "^5.3.3",
     "date-fns": "^4.1.0",
     "gsap": "^3.12.5",
     "jquery": "^3.7.1",
+    "mongoose": "^8.13.1",
     "next": "^14.2.7",
     "react": "^18.3.1",
     "react-accessible-accordion": "^5.0.0",
