--- a/package.json
+++ b/package.json
@@ -26,6 +26,7 @@
     "react-datepicker": "^7.5.0",
     "react-dom": "^18.3.1",
     "react-hook-form": "^7.53.0",
+    "react-hot-toast": "^2.5.2",
     "react-intersection-observer": "^9.13.1",
     "react-masonry-css": "^1.0.16",
     "react-modal-video": "^2.0.2",
