--- a/package.json
+++ b/package.json
@@ -15,7 +15,9 @@
     "aos": "^2.3.4",
     "axios": "^1.8.4",
     "bootstrap": "^5.3.3",
+    "cloudinary": "^2.6.0",
     "date-fns": "^4.1.0",
+    "formidable": "^3.5.2",
     "gsap": "^3.12.5",
     "jquery": "^3.7.1",
     "mongoose": "^8.13.1",
@@ -35,6 +37,7 @@
     "react-tabs": "^6.0.2",
     "react-toastify": "^10.0.6",
     "sass": "^1.80.6",
+    "streamifier": "^0.1.1",
     "swiper": "^11.1.14",
     "yet-another-react-lightbox": "^3.21.6",
     "yup": "^1.4.0"
